.helm/templates/nest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-nest
spec:
  selector:
    app: kuber-nest
  ports:
    - name: http
      port: 3000
