.helm/templates/nest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kuber-nest
spec:
  rules:
    - host: kuber-nest.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-nest
                port:
                  number: 3000
